2008-02-28  Adam Piatyszek  <ediap@users.sourceforge.net>

	* AUTHORS, doc/local/authors.doc: Update list of contributors with
	Martin Senst and Kumar Appaiah

	* win32/itpp_acml_tests/Makefile.am,
	win32/itpp_acml_tests/error_count_test.vcproj,
	win32/itpp_acml_tests/itpp_acml_tests.sln,
	win32/itpp_mkl_tests/Makefile.am,
	win32/itpp_mkl_tests/error_count_test.vcproj,
	win32/itpp_mkl_tests/itpp_mkl_tests.sln: Add MSVC++ project files
	for test program of BERC and BLERC classes

	* tests/error_count_test.cpp: Clean-up redundant casts to short
	integer

	* tests/error_count_test.cpp: Use constructor's initialisation
	list in BERC and BLERC constructors

	* tests/Makefile.am, tests/error_count_test.cpp,
	tests/error_count_test.ref: Add simple test program for BERC and
	BLERC error counters

	* itpp/comm/error_counters.cpp, itpp/comm/error_counters.h: Make
	const member functions actually const

	Introduce the keyword const for member functions like
	get_errorrate() that do not change any member variables. Patch
	submitted by Martin Senst.

	* itpp/comm/channel.h: Unhide Fading_Generator::generate(int)
	method for derived classes

	The "cvec Fading_Generator::generate(int no_samples)" function
	used to be hidden. This change makes it accessible from derived
	classes. Patch submitted by Martin Senst.

	* itpp/base/converters.h: Add specialisations of to_cvec(cvec) and
	to_cmat(cmat)

	These specialisations make it possible to call to_cvec() and
	to_cmat() with complex arguments. The functions then simply return
	their argument. This fixes the problem with instantiating the
	Freq_Filt class with std::complex<double> type. Patch submitted by
	Martin Senst.

	* itpp/base/math/elem_math.h: Documentation improvements

	Clarify that sqr(cvec) and sqr(cmat) compute the absolute square,
	not simply the square. Patch submitted by Martin Senst.

	* itpp/comm/ldpc.h: Introduce LDPC_Code::get_ninfo() member
	function

	This function returns the number of information bits in a